--- a/Survey form/style.css
+++ b/Survey form/style.css
@@ -25,7 +25,7 @@ label{
   width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(46, 46, 171, 0.5), rgba(51, 51, 207, 0.5)),
-    url("https://unsplash.com/photos/n95VMLxqM2I");
+    url("img2.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -125,6 +125,10 @@ button{
   background-color: #37AF65;
   color: beige;
   border: none;
+}
+button:hover{
+  background-color:  #9DD5B5;
+  cursor: pointer;
 }
 @media (max-width: 800px) {
   h1{
